--- a/alan-pto-request/package.json
+++ b/alan-pto-request/package.json
@@ -2,7 +2,7 @@
   "name": "alan-pto-request",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://TessaNyquist.github.io/My-Website-Portfolio.github.io",
+  "homepage": "https://TessaNyquist.github.io/Alan-PTO-Request.github.iogithub.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
